# bncsutil

./: .clang-format.todo  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LEGION TD  README.md  conanfile.py  configure.ac  source_dist.sh  windows_dist.sh
.github/workflows/: cmake.yml  release.yml
CMake/: bncsutilConfig.cmake.in
CMake/Modules/: FindGMP.cmake
src/: Makefile.am
src/bncsutil/: Makefile  bsha1.cpp  buffer.h  cdkeydecoder.cpp  cdkeydecoder.h  checkrevision.cpp  debug.c  debug.h  decodekey.cpp  decodekey.h  file.cpp  file.h  gmp.h  keytables.h  libinfo.cpp  mutil.h  mutil_types.h  nls.c  nls.h  pe.c  pe.h  sha1.c  stack.c
support/: Makefile.in
tags/bncsutil-1.3.1/: windows_dist.bat
tags/bncsutil-1.3.1/src/bncsutil/: cdkeydecoder.cpp  debug.c  debug.h  libinfo.cpp  oldauth.h  stack.h
tags/bncsutil-1.3.1/support/: WHATS_THIS
tags/bncsutil-1.3.1/vc8_build/: BNCSutil.vcproj  BNCSutil1.rc  bncsutil.rc  resource1.h
tests/: checkrevision.c  nls.cpp
trunk/: README-Linux.txt  README-Windows.txt  configure
trunk/src/bncsutil/: checkrevision.cpp  nls.c  oldauth.cpp
trunk/support/: getoptx.sh
trunk/tests/: checkrevision.c
trunk/vc8_build/: BNCSutil.sln  manual_link.bat  resource.h
vc8_build/: BNCSutil.sln  BNCSutil.vcproj  BNCSutil1.aps  bncsutil.def
